fixed alignment issues

--- a/src/Components/Crew/crew.css
+++ b/src/Components/Crew/crew.css
@@ -254,8 +254,6 @@
         justify-content: flex-start;
         margin-left: 10.3rem;
         margin-bottom: 0;
-
-        border: solid 1px white;
     }
 
     .crew-info {
